--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -55,26 +55,24 @@ dominant dark matter density peaks and between baryons and dark matter
 in halos simulated within a full cosmological context. We use as a benchmark the
 observation of \bullg, which is the lowest mass system observed so far
 featuring a bi-modal dark matter distribution with a dislocated 
-baryonic component. We extend previous results by
-studying two halo samples: groups and clusters. We find that $(55\pm 5)\%$
+baryonic component. We extend previous computational results by
+studying two halo samples: groups and clusters. We find that $(50 \pm 10)\%$
 of the dark matter halos with circular velocities in the range
 $300\kms$ to $700\kms$ (groups) show multimodal morphologies with
 displacements between the dark matter clumps equal or larger than
-$133\pm21$\hkpc as observed in \bullg. For dark matter halos with
+$186 \pm 30$\hkpc as observed in \bullg. For dark matter halos with
 circular velocities larger than $700\kms$ (clusters) this fraction
-rises to $(82\pm 3)\%$. Using the same simulation we estimate the
+rises to $(70 \pm 10)\%$. Using the same simulation we estimate the
 dark matter-to-baryon spatial separation and find that $0.1$ to
 $1.0\%$ of the groups should present separations equal or
 larger than $87\pm 14$\hkpc corresponding to our observational
 benchmark; for clusters this fraction rises to $(7\pm 3)\%$, consistent
-with previous studies of dark matter to baryon separations. The
-extension of the theoretical predictions and observational results
-towards low mass bi-modal dark matter configurations opens up the
-possibility for a new statistical test of  $\Lambda$CDM.
-
-
-NOTA: tomar $186\pm 30$ para el DM-DM displacement.
-
+with previous studies of dark matter to baryon separations. In terms
+of absolute numbers densities we find that the expected value for
+bullet groups is tree times larger than the expected value for bullet
+groups. The extension of the theoretical predictions and observational
+results towards low mass bi-modal dark matter configurations opens up
+the possibility for a new statistical test of  $\Lambda$CDM.  
 \end{abstract}
 
 
@@ -186,19 +184,18 @@ repository \footnote{\texttt{https://github.com/Fernandez-Trincado/Bullet\_Group
 In this Letter we make a study at four different redshifts $z=0.0,0.25,
 0.5$ and $1.0$. First, we select all the host halos (i.e. halos that
 are not inside a larger halo) with circular velocities $V_{\rm c}\geq
-300$\kms ($\geq 1\times 10^{13}\\hMsun$). Then, we select the sub-halos with
+300$\kms ($\geq 1\times 10^{13} \hMsun$). Then, we select the sub-halos with
 circular velocities $V_{\rm c}\geq 75$\kms ($\geq 5\times
 10^{10}\hMsun$). The objective is to use this sub-halos as the tracer
 of the sub-dominant dark matter clump in the merging cluster, i.e. the
 bullets. 
 
-For the redshifts $z=0.0,0.25, 0.5$ and $1.0$ we find $10041, 10346,
-10554$ and $10382$ host halos and $157853, 177331, 195072, 225188$
-sub-halos, respectively. These two sets (host halos and sub-halos)
+These two sets (host halos and sub-halos)
 constitute the basis for our analysis. We associate each host halo
 to its most massive sub-halo, each one of these pairs (host \& sub-halo)
 is considered as a potential Bullet system and is kept for the
-analysis described in the next Section. 
+analysis described in the next Section. The number of systems at each
+redshift is listed on the first arrow of Table \ref{table:numbers}.
 
 \section{Bullet Geometry and Measurement Setup}
 \label{sec:setup}
@@ -278,11 +275,12 @@ kind of interactions observed in the Bolshoi Run,
   right panel shows the displacements normalized by the virial radius
   of the host halo. The continuous (dashed) line corresponds to the halos in the
   cluster (group).
-  The vertical lines show the mean value and uncertainties ($133\pm
-  21$\hkpc) in the  separation between the two dark matter clumps
-  estimated in \citet{Gastaldello} for the \bullg. Between $50\%$
+  The vertical lines show the mean value and uncertainties ($186\pm
+  30$\hkpc) in the  separation between the two dark matter clumps
+  estimated in \citet{Gastaldello} for the \bullg. Between $40\%$
   to $60\%$ of the groups show a displacement equal or larger than
-  this observational benchmark.}
+  this observational benchmark. This fraction rises to $60\%$ and
+  $80\%$ in clusters.}
 \label{fig:displacement}
 \end{figure*}
 
@@ -314,9 +312,9 @@ presented for all redshifts $z=0.0, 0.25, 0.5$ and $1.0$.
 The panel with the projected 2D physical displacements also shows a
 vertical stripe with the estimated displacement for the Bullet-group reported by
 \cite{Gastaldello}. In the group sample we see that a fraction of
-$50\%$ to $60\%$  should present a displacement equal than the
+$40\%$ to $60\%$  should present a displacement equal than the
 estimate for \bullg; in the cluster sample this fraction increases to
-$80\%$-$85\%$. The uncertainties in this estimates are derived from
+$70\%$-$80\%$. The uncertainties in this estimates are derived from
 the uncertainties in the displacement measurement for \bullg.This
 fraction is naturally higher in more massive systems because they are
 larger in size. Normalizing the displacements by the virial radius,
@@ -348,8 +346,6 @@ data presented by \cite{Gastaldello}.
   used to construct this histogram includes the halos at all redshifts.}
 \label{fig:geometry}
 \end{figure*}
-
-
 
 
 
@@ -467,38 +463,71 @@ of clusters, consistent with the results reported by
 \subsection{Possible Observational Statistical Tests}
 
 Recently \citep{Foex2013} presented an analysis of $80$ galaxy groups
-from the SL2S sample. From the light distribution, only $34$ objects
+in the SL2S sample. From the light distribution, only $34$ objects
 ($\sim 42\%$) have regular isophotes, $33$ had ellongated
 isophotes (hints of merging system), and $13$ ($\sim 16\%$) had a
-clear bi-modal light distribution.  
+clear bi-modal light distribution.  The system \bullg\ is one of these
+$13$ systems.   
 
 The bi-modal objects are defined to have at least a clear second
 luminosity peak within $350$\hkpc from the main halo, as traced by the
 strong lensing system.  The lowest separation in those systems is
-$64$ \hkpc and the average is $145\pm 52$\hkpc. Comparing this average
-displacement against the integratied distribution for the group sample (left
-panel, Figure \ref{fig:displacement}) one would expects between $40\%$
-to $80\%$ of DM halos to present those displacements. This fraction is
-certainly larger than the $\approx 16\%$ inferred from the
-observational sample. 
+$64$ \hkpc and the average is $145\pm 52$\hkpc. 
 
-We have taken the results from the simulation and selected all the
-objects in the group sample with a DM-DM displacement less than
-$350$\hkpc but larger than $64$\hkpc to find XXX objects in
-total. From this subsample we find that XXX have a DM-baryon
-displacement larger than $87$\hkpc.  
+We now make a comparison of these fractions against the results of our
+simulations. The results are summarized in Table
+\ref{table:numbers}. The first row indicate the total number of halos
+in each sample, at each redshift. The second row shows the number of
+objects with DM-DM displacement $46\hkpc< d_{\rm 2D}< 350$\hkpc. The
+last row indicates the number of objects in the previous sub-sample
+with a  $d_{\rm 2D}^{\rm bar}>87$\hkpc. 
+
+Considering that the statistics for the cluster sample are dominated
+by objects in the mass range of the \bullg we make a comparison
+against this sample. The table shows that $\sim 40\%$ of the 
+clusters are expected to have large DM-DM displacements, this is a
+factor of $\sim 2$ larger than the observational estimate by
+\citep{Foex2013}. However, roughly $\sim 7\%$ of these systems present a
+displacement equal or larger than the observed in the \bullg, a
+fraction that is compatible with the $1/13\sim 0.07$ fraction in the
+observational sample.
 
 This rough comparison hints that it is possible to find a large fraction
 of multi-modal groups with a DM-baryon displacement in a $\Lambda$CDM
-cosmology. A proper comparison must take into account all the
-observational uncertainties and biases to derive a stronger prediction from the
-simulation, something that is beyond the scope of this Letter. 
+cosmology and that our estimates for the relative number of bullet
+systems with respect to multi-modal systems is compatible with
+observations.
+ 
+A proper comparison must take into account all the observational
+uncertainties, biases, mixes between our two populations (groups \&
+clusters at different redshifts) to derive a stronger prediction from
+the simulation, something that is beyond the scope of this Letter.   
+  
+\begin{table*}
+\begin{center}
+\begin{tabular}{ccccccccc}\hline\hline
+        & Groups & Groups & Groups & Groups & Clusters & Clusters & Clusters & Clusters\\
+  & $z=0$   & $z=0.25$   & $z=0.5$   & $z=1.0$   & $z=0$   & $z=0.25$   & $z=0.5$   & $z=1.0$ \\
+  & ($\# $)    & ($\# $)    & ($\# $)    & ($\# $)    & ($\# $)    & ($\# $)    & ($\# $)    & ($\# $)  \\\hline
+Full Sample & 9641 & 9984 & 10244 & 10190 & 400  & 363 & 310 & 192 \\
+$64 <d_{\rm 2D}/\hkpc< 350$ & 6188 & 6422 & 6635 & 6933 & 151 &
+141 & 120 & 99\\
+($64 <d_{\rm 2D}/\hkpc< 350 $) \& ($d_{\rm 2D}^{\rm bar}/\hkpc >87$) & 14 & 25 & 44 & 35 & 8 & 9 & 13 & 8 \\\hline\hline
+\end{tabular}
+\caption{Absolute number of objects in the groups and clusters sample
+  at all redshifts for different selection criteria. }
+\label{table:numbers}
+\end{center}
+\end{table*}
+
+
+
 
 
 \section{Conclusions}
 \label{sec:conclusions}
 
-In this Letter we estimate fraction of galaxy groups and clusters that
+In this Letter we estimate the fraction of galaxy groups and clusters that
 can present observational features associated to a bullet-like
 event. This is motivated by the recent observational results of
 \citep{Gastaldello} where a system (\bullg) on the mass range $1\times
@@ -518,39 +547,32 @@ a resolution that allows to study for the first time Bullet-like
 configurations in the mass range of galaxy groups. 
 
 
-Our main results is that that a fraction of $50\%$-$60\%$ of the halos
+Our main results is that that a fraction of $40\%$-$60\%$ of the halos
 in the group sample present displacement equal or larger than the
 observed displacement for \bullg. For halos in the cluster sample this
-fraction increases to $80\%$-$85\%$. We also derive an
+fraction increases to $60\%$-$80\%$. We also derive an
 estimate for the displacement between the DM and the baryonic
 component. In the group sample $0.1\%$-$1.0\%$ of the halos show a
 displacement equal or larger than  the  measurements of \bullg\ by
 \citep{Gastaldello}. In the cluster sample this fraction rises to
 $4\%$-$10\%$. 
 
-We also find distributions for the DM separation and the velocity of
-the bullet through its host. If these quantities are normalized by the
-virial radius and the circular velocity, respectively, we arrive at
-distributions close to universal that are similar for the two halo
-samples at all redshifts.
 
 For the case of \bullg\ a fair comparison is achieved against cluster
 sample, which has statistics dominated by objects of similar mass. In
-this case we conclude that the existence of such configuration is
-highly probable in $\Lambda$CDM (4$\%$ to $10\%$ abundance). In turn,
-for the same separation the fraction for groups is lower (0.1$\%$ to
-$1\%$). Taking into account that the difference in spatial abundance
-between these two samples is on the order of a factor of $10$, one can
-conclude that the absolute number of groups and clusters presenting a
-DM-baryon displacement larger or equal to \bullg\ should be of the
-same order. 
+a rough comparison using the selection criteria by \citep{Gael2013,
+  Gastaldello} we find that the relative number of bullet groups and
+systems with large DM-DM displacements is consistent with
+observations; both are in the range $\sim 7\%$. In terms of absolute
+numer densities, we expect $\sim 6.0\times 10^{-7}$ Mpc$^{-3}$ Bullet
+groups similar to \bullg; three times the expected value for Bullet
+clusters. 
 
- 
-An observational possibility opens up with surveys such as SL2S that
-targetted a large number of groups and estimate its multi-modal nature
-from lensing analysis \citep{Foex2013}, an approach that can be
-exploited with upcoming lensing surveys (e.g. with the {\it Euclid}
-satellite). 
+We conclude that a new observational possibility opens up with surveys
+such as SL2S that targett a large number of groups and estimate its
+multi-modal nature from lensing analysis \citep{Foex2013}, an approach
+that can be exploited with upcoming lensing surveys (e.g. with the
+{\it Euclid} satellite). 
 
 The CosmoSim database used in this paper is a service by the
 Leibniz-Institute for Astrophysics Potsdam (AIP). The  Bolshoi
