--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -46,18 +46,19 @@
   $^4$ Instituto de F\'isica y Astronom\'ia, Universidad de
   Valpara\'iso, Avda. Gran Breta\~na 1111, Playa Ancha, Valpara\'iso
   2360102, Chile  
-}        
-
+}
+\email{jfernandezt87@gmail.com}
+\email{je.forero@uniandes.edu.co}
 \begin{abstract}
 
 We estimate the expected distribution of displacements between the two
 dominant dark matter density peaks and between baryons and dark matter
-in halos simulated within a full cosmological context. We use as a benchmark the
-observation of \bullg, which is the lowest mass system observed so far
-featuring a bi-modal dark matter distribution with a dislocated 
-baryonic component. We extend previous computational results by
-studying two halo samples: groups and clusters. We find that $(50 \pm 10)\%$
-of the dark matter halos with circular velocities in the range
+in halos simulated within a full cosmological context in $\Lambda$CDM.
+We use as a benchmark the observation of \bullg, which is the lowest mass system observed so far
+featuring a bi-modal dark matter distribution with a dislocated
+baryonic component. We extend to lower masses previous computational results by
+studying two halo samples: groups and clusters. We find that $(50 \pm
+10)\%$ of the dark matter halos with circular velocities in the range
 $300\kms$ to $700\kms$ (groups) show multimodal morphologies with
 displacements between the dark matter clumps equal or larger than
 $186 \pm 30$\hkpc as observed in \bullg. For dark matter halos with
@@ -68,36 +69,33 @@ $1.0\%$ of the groups should present separations equal or
 larger than $87\pm 14$\hkpc corresponding to our observational
 benchmark; for clusters this fraction rises to $(7\pm 3)\%$, consistent
 with previous studies of dark matter to baryon separations. In terms
-of absolute numbers densities we find that the expected value for
-bullet groups is tree times larger than the expected value for bullet
-groups. The extension of the theoretical predictions and observational
-results towards low mass bi-modal dark matter configurations opens up
-the possibility for a new statistical test of  $\Lambda$CDM.  
+of absolute number densities we find that the expected value for
+groups similar to \bullg\ is tree times larger than the expected value
+for clusters. This extension of the theoretical predictions and
+observational results towards low mass bi-modal dark matter
+configurations opens up the possibility for a new statistical test of
+$\Lambda$CDM.   
 \end{abstract}
 
+\keywords{dark matter, galaxies: clusters: individual (SL2S
+  J08544-0121), galaxies: interactions, methods: numerical}
 
-
-\begin{keywords}
-{cosmology: theory -- dark matter} 
-\end{keywords}
 
 \section{Introduction}
 
 
 The Bullet Cluster (\bulla) provided a new kind of observational
 evidence for the existence of dark matter
-\citep{Markevitch2004,Clowe2006}. Quantifying the displacement between
-dark matter and the dominant baryonic component (hot X-ray emitting gas)
-has been used to test the Cold Dark Matter (CDM)
-paradigm itself by quantifying the substructure velocity required to
-produce such displacement \citep{Hayashi2006, Springel2007,
-  Thompson2012}, the displacemeent between the dominant dark matter
-and baryonic component \citep{ForeroRomero2010} to estimate the
-expected abundance of such events in a $\Lambda$CDM Universe, putting
-constraints on the dark matter particle self-interaction cross section
-and even explore possible extensions to the concordance cosmological model
-\citep{Farrar2007,Lee2010,Lee2012}.    
-
+\citep{Markevitch2004,Clowe2006}. Since then it has been used to test the Cold
+Dark Matter (CDM) paradigm itself by quantifying different aspects
+such as the expected displacement between the dominant dark matter and
+baryonic component in a $\Lambda$CDM Universe \citep{ForeroRomero2010}
+or the substructure velocity required to produce such displacement \citep{Hayashi2006, Springel2007,
+  Thompson2012}. It has also been used to constrain the dark matter
+particle self-interaction cross section and to explore possible
+extensions to the concordance cosmological model
+\citep{Farrar2007,Lee2010,Lee2012}.     
+ 
 
 Since then, other examples of Bullet-like systems have been found; 
 MACS J0025.4-1222 \citep{Bradac2008}, Abell 2744 \citep{Merten2011},
@@ -484,24 +482,26 @@ with a  $d_{\rm 2D}^{\rm bar}>87$\hkpc.
 
 Considering that the statistics for the cluster sample are dominated
 by objects in the mass range of the \bullg we make a comparison
-against this sample. The table shows that $\sim 40\%$ of the 
+against this sample. Table \ref{table:numbers} shows that $\sim 40\%$ of the 
 clusters are expected to have large DM-DM displacements, this is a
 factor of $\sim 2$ larger than the observational estimate by
 \citep{Foex2013}. However, roughly $\sim 7\%$ of these systems present a
 displacement equal or larger than the observed in the \bullg, a
 fraction that is compatible with the $1/13\sim 0.07$ fraction in the
-observational sample.
+observational sample. 
 
-This rough comparison hints that it is possible to find a large fraction
-of multi-modal groups with a DM-baryon displacement in a $\Lambda$CDM
-cosmology and that our estimates for the relative number of bullet
-systems with respect to multi-modal systems is compatible with
-observations.
- 
-A proper comparison must take into account all the observational
+
+This rough comparison  that our estimates for the relative number of
+bullet systems with respect to multi-modal systems is compatible with
+observations. A proper comparison must take into account all the observational
 uncertainties, biases, mixes between our two populations (groups \&
 clusters at different redshifts) to derive a stronger prediction from
 the simulation, something that is beyond the scope of this Letter.   
+
+Neverthless, comparing the group and cluster samples we expect to have
+a number density of bullets similar to \bullg that is three times
+larger for groups than for clusters.
+
   
 \begin{table*}
 \begin{center}
