--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -527,14 +527,13 @@ $64 <d_{\rm 2D}/\hkpc< 350$ & 6188 & 6422 & 6635 & 6933 & 151 &
 \section{Conclusions}
 \label{sec:conclusions}
 
-In this Letter we estimate the fraction of galaxy groups and clusters that
-can present observational features associated to a bullet-like
-event. This is motivated by the recent observational results of
-\citep{Gastaldello} where a system (\bullg) on the mass range $1\times
-10^{14}$\hMsun\ and velocity dispersion $650$\kms was reported to
-feature a displacement between its baryonic (hot gas) and dark matter
-components.  
-
+In this Letter we estimate the fraction of galaxy groups and clusters
+in a $\Lambda$CDM cosmology that could present observational features
+associated to a bullet-like event. This is motivated by the recent
+observational results of \citep{Gastaldello} where a system (\bullg)
+on the mass range $1\times 10^{14}$\hMsun\ and velocity dispersion
+$650$\kms was reported to feature a displacement between its baryonic
+(hot gas) and dark matter components. 
 
 We estimate the distribution of projected displacements
 between the dominant DM clumps in two kinds of systems; groups with
@@ -546,33 +545,30 @@ results are based on large DM-only N-body cosmological simulation with
 a resolution that allows to study for the first time Bullet-like
 configurations in the mass range of galaxy groups. 
 
-
-Our main results is that that a fraction of $40\%$-$60\%$ of the halos
-in the group sample present displacement equal or larger than the
+Our main result is that a fraction of $40\%$-$60\%$ of the halos
+in the group sample present DM-DM displacement equal or larger than the
 observed displacement for \bullg. For halos in the cluster sample this
 fraction increases to $60\%$-$80\%$. We also derive an
-estimate for the displacement between the DM and the baryonic
-component. In the group sample $0.1\%$-$1.0\%$ of the halos show a
-displacement equal or larger than  the  measurements of \bullg\ by
-\citep{Gastaldello}. In the cluster sample this fraction rises to
-$4\%$-$10\%$. 
+estimate for the DM-baryon displacement In the group sample
+$0.1\%$-$1.0\%$ of the halos show a displacement equal or larger than
+the  measurements of \bullg\ by \citep{Gastaldello}; in the cluster
+sample this fraction rises to $4\%$-$10\%$. 
 
+For the case of \bullg\ a fair comparison is achieved against our cluster
+sample which has statistics dominated by objects of similar mass. In
+a rough comparison using the selection criteria in \citep{Foex2013,
+  Gastaldello} we find that the relative number of bullet groups
+(large DM-baryon displacement) with respect to a general sample of
+multi-modal systems (large DM-DM displacements) is consistent with
+observations; both are in the range $\sim 7\%$. 
 
-For the case of \bullg\ a fair comparison is achieved against cluster
-sample, which has statistics dominated by objects of similar mass. In
-a rough comparison using the selection criteria by \citep{Gael2013,
-  Gastaldello} we find that the relative number of bullet groups and
-systems with large DM-DM displacements is consistent with
-observations; both are in the range $\sim 7\%$. In terms of absolute
-numer densities, we expect $\sim 6.0\times 10^{-7}$ Mpc$^{-3}$ Bullet
-groups similar to \bullg; three times the expected value for Bullet
-clusters. 
-
-We conclude that a new observational possibility opens up with surveys
-such as SL2S that targett a large number of groups and estimate its
-multi-modal nature from lensing analysis \citep{Foex2013}, an approach
-that can be exploited with upcoming lensing surveys (e.g. with the
-{\it Euclid} satellite). 
+In terms of absolute numer densities, we expect to have $\sim 6.0\times
+10^{-7}$ Mpc$^{-3}$ groups similar to \bullg; three times the expected
+value for clusters. This opens up a new observational possibility with surveys
+such as SL2S that target a large number of groups and estimate its
+multi-modal nature from lensing analysis \citep{Foex2013}. An approach
+that can be further exploited with upcoming lensing surveys (e.g. with
+the {\it Euclid} satellite). 
 
 The CosmoSim database used in this paper is a service by the
 Leibniz-Institute for Astrophysics Potsdam (AIP). The  Bolshoi
