--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -268,13 +268,14 @@ kind of interactions observed in the Bolshoi Run,
 \end{center}
 \caption{
   Integrated probability distribution for the displacement between the
-  center of the host halo and its dominant sub-halo. The left panel
+  center of the host halo and its dominant sub-halo at all redshifts
+  $z=0$, $0.25$, $0.5$ and $1.0$. The left panel
   shows the results in terms of the physical displacements while the
   right panel shows the displacements normalized by the virial radius
   of the host halo. The continuous (dashed) line corresponds to the halos in the
-  cluster (group).
+  cluster (group) sample.
   The vertical lines show the mean value and uncertainties ($186\pm
-  30$\hkpc) in the  separation between the two dark matter clumps
+  30\hkpc$) in the  separation between the two dark matter clumps
   estimated in \citet{Gastaldello} for the \bullg. Between $40\%$
   to $60\%$ of the groups show a displacement equal or larger than
   this observational benchmark. This fraction rises to $60\%$ and
@@ -535,7 +536,7 @@ on the mass range $1\times 10^{14}$\hMsun\ and velocity dispersion
 $650$\kms was reported to feature a displacement between its baryonic
 (hot gas) and dark matter components. 
 
-We estimate the distribution of projected displacements
+We compute the distribution of projected displacements
 between the dominant DM clumps in two kinds of systems; groups with
 circular velocities $300\kms<V_{\rm c}<700\kms$ ($1.0\times
 10^{13}\hMsun < M_{\rm vir}<1.0\times 10^{14}\hMsun$) and clusters with $V_{\rm
@@ -556,8 +557,8 @@ sample this fraction rises to $4\%$-$10\%$.
 
 For the case of \bullg\ a fair comparison is achieved against our cluster
 sample which has statistics dominated by objects of similar mass. In
-a rough comparison using the selection criteria in \citep{Foex2013,
-  Gastaldello} we find that the relative number of bullet groups
+a rough comparison using the observational criteria \citep{Foex2013,
+  Gastaldello} we find that the relative number of bullets
 (large DM-baryon displacement) with respect to a general sample of
 multi-modal systems (large DM-DM displacements) is consistent with
 observations; both are in the range $\sim 7\%$. 
