--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -86,55 +86,55 @@ $\Lambda$CDM.
 
 The Bullet Cluster (\bulla) provided a new kind of observational
 evidence for the existence of dark matter
-\citep{Markevitch2004,Clowe2006}. Since then it has been used to test the Cold
-Dark Matter (CDM) paradigm itself by quantifying different aspects
-such as the expected displacement between the dominant dark matter and
-baryonic component in a $\Lambda$CDM Universe \citep{ForeroRomero2010}
-or the substructure velocity required to produce such displacement \citep{Hayashi2006, Springel2007,
+\citep{Markevitch2004,Clowe2006}. Since then it has been used to test
+the Cold Dark Matter (CDM) paradigm itself by quantifying different
+aspects such as the expected displacement between the dominant dark
+matter and baryonic component in a $\Lambda$CDM Universe
+\citep{ForeroRomero2010} or the substructure velocity required to
+produce such displacement \citep{Hayashi2006, Springel2007,
   Thompson2012}. It has also been used to constrain the dark matter
 particle self-interaction cross section and to explore possible
 extensions to the concordance cosmological model
-\citep{Farrar2007,Lee2010,Lee2012}.     
+\citep{Farrar2007,Lee2010,Lee2012}.      
  
 
 Since then, other examples of Bullet-like systems have been found; 
 MACS J0025.4-1222 \citep{Bradac2008}, Abell 2744 \citep{Merten2011},
 DLSCL J0916.2+2951 \citep{Dawson2012}, ZwCl 1234.0+02916
-\citep{Dahle2013}. Recently \citep{Gastaldello} observed a baryonic-DM
-displacement if $124\pm 20$ kpc in \bullg, a group-like system with a total
-mass $2.4\pm 0.6 \times 10^{14}$\Msun. Systems of this mass are
-$\sim10$ times more abundant than cluster systems in the mass range of
-the Bullet Cluster $>10^{15}$\hMsun, this opens up the possibility of
-observationally finding bullet groups in a fair amount to impose
-constraints on $\Lambda$CDM. 
+\citep{Dahle2013}. Recently \citep{Gastaldello} observed a DM-baryon
+displacement of $87\pm 14$\hkpc and a DM-DM separation of $186\pm
+30$\hkpc in \bullg, a group-like system with a total
+mass $2.4\pm 0.6 \times 10^{14}$\Msun found in the the Strong Lensing
+Legacy Survey (SL2S) sample \citep{Cabanac2007,More2012}.
 
 
-However, a greater abundance of small mass systems has to be weighted
-by the probability of having a merger and 
-presenting a large displacement between the DM and baryonic
-components. These two conditions (merger rates, maximum possible
-displacement) are a funcion of DM halo mass in $\Lambda$CDM
-cosmologies.  Such study has been performed for clusters but not for
-lower mass systems \citep{ForeroRomero2010}. The existence of objects
-like \bullg\ and observational campaigns like the Strong Lensing Legacy
-Survey (SL2S) \citep{Cabanac2007,More2012} open up the possibility of finding
-multi-modal dark matter distributions in the group mass range. 
+Groups around this mass are $\sim10$ times more abundant than clusters
+in the mass range of the Bullet Cluster $>10^{15}$\hMsun. This 
+should open up the possibility of finding Bullet Groups in large
+numbers to test $\Lambda$CDM. However, a larger abundance of small
+mass systems has to be weighted by the probability of being in a
+merger and  presenting a large displacement between the DM and
+baryonic components.  These two conditions (merger rates, maximum
+possible displacement) are a funcion of DM halo mass in $\Lambda$CDM
+cosmologies.  A detailed statistical study to estimate the abundance
+of Bullets has been performed for clusters but not for lower mass
+systems \citep{ForeroRomero2010}.  
 
-
-In this Letter we compute the abundance of group-like dark
-matter halos with a multi-modal morphology that also might present a
-DM-baryon displacement. To this end we use a N-body cosmological
-simulation with such a resolution that allows us to identify
-multi-modal dark matter distributions in hosts with circular velocities
-larger than $300$\kms.  
+In this Letter we extend such study for systems in the group mass
+scale. We measure the abundance of DM systems with with a multi-modal
+morphology (large DM-DM displacements) and estimate the amount of
+systems with a Bullet configuration  (large DM-baryon
+displacements). To this end we use a high resolution N-body
+cosmological simulation (Bolshoi) that allows us to find  multi-modal
+dark matter distributions in hosts with circular velocities larger
+than $300$\kms ($\sim 1.0\times 10^{13}\hMsun$).  
 
 This Letter is organized as follows. In Section
 \ref{sec:simulation} we present the simulation and the halo catalogs
 used in this work. We continue in Section \ref{sec:setup} with the
-geometry of the problem at hand and the measurements setup. Next in
+geometry of the problem at hand and the measurement setup. Next in
 Section \ref{sec:results} we present our results and observational
 perspectives to finally conclude in Section \ref{sec:conclusions}. 
-
 
 \section{Simulation, halo catalogs and pairs}
 \label{sec:simulation}
